# OtoriscV

./: .gitignore  Cargo.toml  README.md
build-linux/: build_minimal_kernel.sh  kernel_minimal_fragment.config  kernel_ultra_minimal.config
docs/: bb_jit_implementation.md  bb_jit_v2_implementation.md  jit_backend_feature_flags.md  jit_v2_debugging_journey.md  jor1k_optimization_analysis.md  performance_upgrade_plan.md  rv64gc_upgrade_plan.md  uart_interrupt_debugging.md
images/: Image-minimal  Image-minimal-rv64  Image-minimal-rv64.zst  Image-minimal.zst  minishell.cpio
src/: lib.rs  main.rs  snapshot.rs  system.rs  system64.rs
src/cpu/: csr.rs  decode.rs  execute.rs  fpu.rs  mmu.rs  mod.rs  trap.rs
src/cpu/rv32/: bb_jit.rs  bb_jit_v2.rs  csr.rs  decode.rs  execute.rs  execute_fp.rs  icache.rs  mmu.rs  mod.rs  run_fast.rs  run_inline_switch.rs
src/cpu/rv32/jit/: mod.rs  v1.rs
src/cpu/rv32/jit/v1/: mod.rs
src/cpu/rv32/jit/v1/codegen/: emit.rs  interp.rs  mod.rs  wasm.rs
src/cpu/rv32/jit/v2/: cfg.rs  discovery.rs  execute.rs  mod.rs  state.rs  types.rs  wasm.rs
src/cpu/rv32/jit/v2/codegen/: dynasm.rs  emit.rs  (+4 more)
src/cpu/rv64/: csr.rs  debug.rs  decode.rs  execute.rs  execute_c.rs  execute_fp.rs  jit.rs  mmu.rs  mod.rs  trap.rs
src/devices/: clint.rs  dtb.rs  mod.rs  plic.rs  uart.rs  virtio.rs  virtio_9p.rs
src/devices/virtio_9p/: filesystem.rs  host.rs  in_memory.rs  mod.rs
src/memory/: mod.rs
tests/: benchmark_wasm.js
tests/minishell/: init_minishell  init_minishell.c
tests/virtio/: gen_virtio_test.py  virtio.rs
www/: index.html  shell.html
