[package]
name = "otoriscv"
version = "0.1.0"
edition = "2021"
authors = ["tak2hu"]
description = "RISC-V 32-bit emulator in Rust, targeting WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde-wasm-bindgen = "0.4"
zstd = "0.13"
flate2 = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Performance",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Single codegen unit for better optimization
